--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "@jahed/terraform",
   "version": "1.13.1",
-  "description": "A wrapper which downloads and runs Terraform locally via npm.",
-  "author": "Jahed Ahmed <jahed.public@gmail.com> (https://jahed.dev)",
+  "description": "A wrapper which provides platform-specific Terraform binaries via npm.",
   "license": "MIT",
-  "repository": "https://github.com/jahed/node-terraform",
-  "homepage": "https://github.com/jahed/node-terraform",
-  "bugs": "https://github.com/jahed/node-terraform/issues",
-  "funding": "https://jahed.dev/donate",
   "keywords": [
     "terraform",
     "hashicorp",
@@ -15,8 +10,8 @@
     "automation",
     "executable",
     "wrapper",
-    "pgp",
-    "download"
+    "binary",
+    "platform"
   ],
   "main": "lib/terraform.js",
   "bin": "bin/terraform.js",
@@ -31,13 +26,9 @@
     "test": "./tests/run.sh",
     "version": "npm run build && npm run test"
   },
-  "dependencies": {
-    "@jahed/promises": "^1.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.4",
     "@types/node": "^16.18.126",
-    "npm-check-updates": "^16.14.20",
     "prettier": "^2.8.8",
     "typescript": "4.9.x"
   },
