--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jahed/terraform",
   "version": "1.13.1",
-  "description": "A wrapper which provides platform-specific Terraform binaries via npm.",
+  "description": "A wrapper for platform-specific Terraform binaries via npm",
   "license": "MIT",
   "keywords": [
     "terraform",
@@ -13,7 +13,6 @@
     "binary",
     "platform"
   ],
-  "main": "lib/terraform.js",
   "bin": "bin/terraform.js",
   "files": [
     "bin",
@@ -21,16 +20,15 @@
     "hashicorp.asc"
   ],
   "scripts": {
-    "lint": "prettier -c .",
+    "lint": "prettier --check .",
+    "fix": "prettier --write .",
     "build": "rm -rf ./lib ./artifacts && tsc && mkdir ./artifacts && mv \"$(npm pack)\" ./artifacts/package.tgz",
-    "test": "./tests/run.sh",
-    "version": "npm run build && npm run test"
+    "test": "./tests/run.sh"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.18.126",
     "prettier": "^2.8.8",
-    "typescript": "4.9.x"
+    "typescript": "^4.9"
   },
   "optionalDependencies": {
     "@jahed/terraform-darwin-arm64": "1.13.1",
