--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,33 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Determine versions
         id: version
-        run: |
-          set -euo pipefail
-
-          # Get package version from package.json
-          PACKAGE_VERSION=$(jq -r '.version' package.json)
-          echo "package_version=${PACKAGE_VERSION}" >> $GITHUB_OUTPUT
-
-          # Determine terraform version
-          if [[ -n "${{ inputs.terraform_version }}" ]]; then
-            TERRAFORM_VERSION="${{ inputs.terraform_version }}"
-            echo "Using input terraform version: ${TERRAFORM_VERSION}"
-          elif [[ "${{ github.ref_type }}" == "tag" ]]; then
-            # Extract version from git tag (remove 'v' prefix if present)
-            TERRAFORM_VERSION="${{ github.ref_name }}"
-            TERRAFORM_VERSION="${TERRAFORM_VERSION#v}"
-            echo "Using git tag terraform version: ${TERRAFORM_VERSION}"
-          else
-            # Use package.json version as fallback
-            TERRAFORM_VERSION="${PACKAGE_VERSION}"
-            echo "Using package.json terraform version: ${TERRAFORM_VERSION}"
-          fi
-
-          echo "terraform_version=${TERRAFORM_VERSION}" >> $GITHUB_OUTPUT
-
-          echo "Final versions:"
-          echo "  Package version: ${PACKAGE_VERSION}"
-          echo "  Terraform version: ${TERRAFORM_VERSION}"
+        run: ./scripts/release/determine-versions.sh "${{ inputs.terraform_version }}" github
 
   # Build platform-specific packages first
   build-platform-packages:
@@ -90,175 +64,18 @@ jobs:
           path: ./
 
       - name: Update optionalDependencies versions
-        run: |
-          set -euo pipefail
-
-          TERRAFORM_VERSION="${{ needs.prepare.outputs.terraform_version }}"
-          TEMP_PKG_JSON=$(mktemp)
-
-          echo "Updating optionalDependencies to terraform version: ${TERRAFORM_VERSION}"
-
-          # Extract package.json from the built tarball to get the current structure
-          tar -xzf ./artifacts/package.tgz --strip-components=1 package/package.json
-          mv package/package.json current_package.json
-
-          # Update optionalDependencies versions using jq
-          jq --arg version "$TERRAFORM_VERSION" '
-            .optionalDependencies = (.optionalDependencies // {} | 
-              with_entries(
-                if .key | startswith("@jahed/terraform-") then
-                  .value = $version
-                else
-                  .
-                end
-              )
-            )
-          ' current_package.json > "$TEMP_PKG_JSON"
-
-          # Verify the update worked
-          echo "Updated optionalDependencies:"
-          jq '.optionalDependencies' "$TEMP_PKG_JSON"
-
-          # Replace the package.json in the tarball
-          mkdir -p temp_extract
-          cd temp_extract
-          tar -xzf ../artifacts/package.tgz
-          cp "$TEMP_PKG_JSON" package/package.json
-
-          # Repackage with updated package.json
-          tar -czf ../artifacts/package.tgz package/
-          cd ..
-          rm -rf temp_extract current_package.json "$TEMP_PKG_JSON"
-
-          echo "Successfully updated package.json in artifacts"
+        run: ./scripts/release/update-tarball-deps.sh ./artifacts/package.tgz "${{ needs.prepare.outputs.terraform_version }}"
 
       - name: Verify package integrity
-        run: |
-          set -euo pipefail
-
-          echo "Verifying package integrity..."
-
-          # Extract and verify the final package
-          mkdir -p verify_extract
-          cd verify_extract
-          tar -xzf ../artifacts/package.tgz
-
-          # Check package.json is valid
-          if ! jq . package/package.json >/dev/null; then
-            echo "Error: Invalid package.json after update"
-            exit 1
-          fi
-
-          # Verify optionalDependencies versions
-          echo "Final optionalDependencies versions:"
-          jq '.optionalDependencies' package/package.json
-
-          # Check that all expected platform packages are present
-          EXPECTED_PACKAGES=(
-            "@jahed/terraform-darwin-arm64"
-            "@jahed/terraform-darwin-x64"
-            "@jahed/terraform-linux-x64"
-            "@jahed/terraform-linux-arm64" 
-            "@jahed/terraform-linux-arm"
-            "@jahed/terraform-win32-x64"
-            "@jahed/terraform-win32-arm64"
-            "@jahed/terraform-freebsd-x64"
-            "@jahed/terraform-openbsd-x64"
-            "@jahed/terraform-solaris-x64"
-          )
-
-          for package in "${EXPECTED_PACKAGES[@]}"; do
-            if ! jq -e ".optionalDependencies[\"$package\"]" package/package.json >/dev/null; then
-              echo "Warning: Expected package $package not found in optionalDependencies"
-            else
-              echo "✓ Found $package in optionalDependencies"
-            fi
-          done
-
-          cd ..
-          rm -rf verify_extract
-
-          echo "Package integrity verification completed"
+        run: ./scripts/release/verify-package-integrity.sh ./artifacts/package.tgz "${{ needs.prepare.outputs.terraform_version }}"
 
       - name: Publish main package to npm
-        run: |
-          set -euo pipefail
-
-          echo "Publishing main package to npm..."
-
-          # Check if this version already exists
-          PACKAGE_VERSION="${{ needs.prepare.outputs.package_version }}"
-          if npm view "@jahed/terraform@${PACKAGE_VERSION}" version 2>/dev/null; then
-            echo "Warning: Package @jahed/terraform@${PACKAGE_VERSION} already exists on npm"
-            echo "This might be a republish attempt. Proceeding anyway..."
-          fi
-
-          npm publish --provenance --access public ./artifacts/package.tgz
-
-          echo "Successfully published @jahed/terraform@${PACKAGE_VERSION}"
+        run: ./scripts/release/publish-main-package.sh ./artifacts/package.tgz "${{ needs.prepare.outputs.package_version }}"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub release
-        run: |
-          set -euo pipefail
-
-          PACKAGE_VERSION="${{ needs.prepare.outputs.package_version }}"
-          TERRAFORM_VERSION="${{ needs.prepare.outputs.terraform_version }}"
-
-          echo "Creating GitHub release for v${PACKAGE_VERSION}..."
-
-          # Create release notes
-          RELEASE_NOTES=$(cat << EOF
-          # Release v${PACKAGE_VERSION}
-
-          This release includes Terraform ${TERRAFORM_VERSION} binaries for all supported platforms.
-
-          ## What's Changed
-
-          - Updated to Terraform ${TERRAFORM_VERSION}
-          - Pre-built binaries available for all supported platforms
-          - Improved installation performance with platform-specific packages
-
-          ## Platform Support
-
-          This release includes platform-specific packages for:
-
-          - macOS (ARM64, x64)
-          - Linux (ARM64, x64, ARM)
-          - Windows (ARM64, x64) 
-          - FreeBSD (x64)
-          - OpenBSD (x64)
-          - Solaris (x64)
-
-          ## Installation
-
-          \`\`\`bash
-          npm install @jahed/terraform
-          \`\`\`
-
-          The appropriate platform binary will be automatically installed based on your system.
-
-          ## Usage
-
-          \`\`\`bash
-          npx terraform --version
-          \`\`\`
-
-          ---
-
-          **Full Changelog**: https://github.com/jahed/node-terraform/compare/v${PACKAGE_VERSION}...v${PACKAGE_VERSION}
-          EOF
-          )
-
-          # Create the release
-          gh release create "v${PACKAGE_VERSION}" \
-            --title "v${PACKAGE_VERSION}" \
-            --notes "${RELEASE_NOTES}" \
-            --verify-tag \
-            ./artifacts/package.tgz
-
-          echo "Successfully created release v${PACKAGE_VERSION}"
+        run: ./scripts/release/create-github-release.sh "${{ needs.prepare.outputs.package_version }}" "${{ needs.prepare.outputs.terraform_version }}" ./artifacts/package.tgz
         env:
           GH_TOKEN: ${{ github.token }}
 
