--- a/package.json
+++ b/package.json
@@ -16,19 +16,17 @@
   "bin": "bin/terraform.js",
   "files": [
     "bin",
-    "lib",
+    "src",
     "hashicorp.asc"
   ],
   "scripts": {
     "lint": "prettier --check .",
     "fix": "prettier --write .",
-    "build": "rm -rf ./lib ./artifacts && tsc && mkdir ./artifacts && mv \"$(npm pack)\" ./artifacts/package.tgz",
+    "build": "rm -rf ./artifacts && mkdir ./artifacts && mv \"$(npm pack)\" ./artifacts/package.tgz",
     "test": "./tests/run.sh"
   },
   "devDependencies": {
-    "@types/node": "^16.18.126",
-    "prettier": "^2.8.8",
-    "typescript": "^4.9"
+    "prettier": "^2.8.8"
   },
   "optionalDependencies": {
     "@jahed/terraform-darwin-arm64": "1.13.1",
